--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -3,7 +3,7 @@
  <ul>
    <% for company in @companies %>
     <li>
-      <%= company.name %>
+      <a href="/companies/<%= company.id >>
     </li>
    <% end %>
 </ul>
