--- a/app/views/dice/index.html.erb
+++ b/app/views/dice/index.html.erb
@@ -1,3 +1,8 @@
+<%if @name%>
+
+<h1>Roll the dice, <%= @name%> </h1>
+
+
 <%
   die1 = rand(1..6)
   die2 = rand(1..6)
@@ -14,3 +19,9 @@
 <p>
   <a href="/dice">Roll Again</a>
 </p>
+<% else %>
+  <h1>What is your name? </h1>
+  <form action ="/dice" method="GET">
+    <input name="name" type="text">
+    <button>Let's play!</button>
+  </form>
