--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,5 +1,6 @@
 <h1> <% @company.name %></h1>
-<h2> <%= @company.city %>, <%= @company%> </h2>
+<h2> <%= @company.city %>, <%= @company.state%> </h2>
+<>
 <p>
     <a href="/companies"> Go back to [ ] companies
-    
+
