--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,1 +1,8 @@
 <h1>New Post</h1>
+
+<%= form_with model: @post do |form|%>
+    <%= form.label "author" %>
+    <%= form.text_field "author" %>
+
+    <%= form.text_field "body" %>
+    <%= form.text_field "image" %>
